--- a/preference.ini
+++ b/preference.ini
@@ -1,8 +1,8 @@
-devMode=1
-productionServer=http://quickiots.com
-devServer=http://localhost/quickiots/website
+devMode=0
+productionServer=https://quickiots.com/quick-iots-desktop
+devServer=http://localhost/quickiots/quick-iots-desktop
 arduinoPath=D:\Program Files (x86)\Arduino\
-editor_version=0.7
+editor_version=0.8
 omg_version=0.9.2beta
 appPath=D:\xampp7\htdocs\open-mqtt-editor
 appSrc=D:\xampp7\htdocs\open-mqtt-editor
